// Copyright 2018 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package config;

import "google/protobuf/empty.proto";
import "go.chromium.org/luci/gce/api/config/v1/config.proto";

// A request to delete a config.
message DeleteRequest {
  // The id of the config to delete.
  string id = 1;
}

// A request to create or update a config.
message EnsureRequest {
  // The id of the config to ensure.
  string id = 1;
  // The config.
  Config config = 2;
}

// A request to get a config.
message GetRequest {
  // The id of the config to get.
  string id = 1;
}

// A request to list all configs.
message ListRequest {
  // TODO(smut): Support page size and token if necessary.
}

// A response containing configs.
message ListResponse {
  // The configs.
  repeated Config configs = 1;
}

// A service for manipulating configs.
service Configuration {
  // Delete deletes an existing config.
  // Internal API.
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  // Ensure ensures a config exists.
  // Creates a new config or updates an existing one as necessary.
  // Internal API.
  rpc Ensure(EnsureRequest) returns (Config);
  // Get returns an existing config.
  rpc Get(GetRequest) returns (Config);
  // List returns all existing configs.
  rpc List(ListRequest) returns (ListResponse);
}
